# bird_mach

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: __init__.py  bench_analysis.py  bench_api.py  bench_embedding.py
bird_mach/: __init__.py  __main__.py  analysis.py  audio_utils.py  cache.py  clustering.py  compare.py  config.py  constants.py  effects.py  embedding.py  exceptions.py  exporters.py  favorites.py  feature_concat.py  genre.py  history.py  logging_config.py  metrics.py  middleware.py  notifications_service.py  pitch.py  presets.py  project_manager.py  rate_limiter.py  search_engine.py  segmentation.py  similarity.py  tagging.py  templates.py  types.py  validators.py  waveform_stats.py  webapp.py
docs/: README.md  api-v1.md  api.md  architecture.md  clustering.md  deployment.md  effects.md  live-mode.md  pitch.md  presets.md
scripts/: analyze_audio.py  backup.sh  batch_process.py  bird_sound_3d.py  cluster_audio.py  compare_audio.py  fill_commits.py  generate_api_docs.py  generate_commits.py  health_check.sh  march_commits.py  march_fill.py  march_final.py  run_migrations.py  seed_db.py
tests/: __init__.py  conftest.py  conftest_enterprise.py  test_analysis.py  test_api_schemas.py  test_cache.py  test_cli.py  test_clustering.py  test_colors.py  test_compare.py  test_config.py  test_effects.py  test_embedding.py  test_exporters.py  test_favorites.py  test_feature_concat.py  test_genre.py  test_history.py  test_loaders.py  test_metrics.py  test_middleware.py  test_notifications_service.py  test_pitch.py  test_presets.py  test_project_manager.py  test_rate_limiter.py  (+8 more)
(+2183 files in other folders)
